[package]
name = "bricktest"
version = "0.1.0"
authors = ["Dean De Carli <neaddean@gmail.com>"]
edition = "2018"
#default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
rand = "0.8.0"
specs = { version = "0.16.1", features = ["specs-derive"] }
