[package]
name = "bricktest"
version = "0.1.0"
authors = ["Dean De Carli <neaddean@gmail.com>"]
edition = "2018"
default-run = "main"

[dependencies]
ggez = "0.5.1"
rand = "0.8.0"
specs = { version = "0.16.1", features = ["specs-derive"] }
winit = { version = "0.19.3" }
num = "0.3.1"
itertools = "0.10.0"
gfx_core = "0.9.2"
gfx_device_gl = "0.16.2"
imgui = "0.4"
imgui-gfx-renderer = "0.4"
